tests/snapshots/run_wpt_conformance__onnx_exp_float32_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "exp.https.any.js",
    "exp float32 1D constant tensor",
    "onnx",
    "PASS",
)
